--- a/redux-practice/package.json
+++ b/redux-practice/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "framer-motion": "^6.3.4",
+    "lodash.isequal": "^4.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
@@ -76,6 +77,7 @@
     "@storybook/preset-create-react-app": "^4.1.1",
     "@storybook/react": "^6.5.4",
     "@storybook/testing-library": "^0.0.11",
+    "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.0.0",
