--- a/redux-practice/package.json
+++ b/redux-practice/package.json
@@ -22,6 +22,7 @@
     "lodash.isequal": "^4.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
