--- a/redux-practice/package.json
+++ b/redux-practice/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@chakra-ui/storybook-addon": "^3.0.2",
     "@mdx-js/react": "^2.1.1",
     "@storybook/addon-actions": "^6.5.4",
     "@storybook/addon-essentials": "^6.5.4",
