--- a/redux-practice/.eslintrc.json
+++ b/redux-practice/.eslintrc.json
@@ -41,7 +41,9 @@
     }],
       "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
       "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
-      "import/order": ["error", {"groups": ["index", "sibling", "parent", "internal", "external", "builtin", "object", "type"]}]
+      "import/prefer-default-export": "off",
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": ["off"]
     }
   }
   
