--- a/redux-practice/package.json
+++ b/redux-practice/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,7 +39,8 @@
     "test": "jest --watch --coverage",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "server": "json-server --watch --port 1234 src/data.json"
   },
   "eslintConfig": {
     "extends": [
@@ -93,6 +95,7 @@
     "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^17.0.35",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.0.0",
     "babel-plugin-named-exports-order": "^0.0.2",
