--- a/redux-practice/.eslintrc.json
+++ b/redux-practice/.eslintrc.json
@@ -40,7 +40,8 @@
         "exceptions": ["**/*/jest.config.ts"]
     }],
       "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
-      "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+      "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
+      "import/order": ["error", {"groups": ["index", "sibling", "parent", "internal", "external", "builtin", "object", "type"]}]
     }
   }
   
