--- a/redux-practice/package.json
+++ b/redux-practice/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@chakra-ui/react": "^2.1.2",
+    "@chakra-ui/system": "^2.5.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-free": "6.0.0",
@@ -12,18 +14,20 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^27.5.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
-    "framer-motion": "^6.3.4",
+    "formik": "^2.2.9",
     "lodash.isequal": "^4.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-paginate": "^8.1.3",
+    "react-images-uploading": "^3.1.7",
     "react-redux": "^8.0.2",
+    "react-refresh": "^0.14.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
@@ -65,21 +69,30 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/plugin-syntax-flow": "^7.14.5",
     "@chakra-ui/storybook-addon": "^3.0.2",
+    "@jest/types": "^29.5.0",
     "@mdx-js/react": "^2.1.1",
     "@storybook/addon-actions": "^6.5.4",
     "@storybook/addon-essentials": "^6.5.4",
     "@storybook/addon-interactions": "^6.5.4",
     "@storybook/addon-links": "^6.5.4",
     "@storybook/addon-viewport": "^6.5.4",
+    "@storybook/addons": "^6.5.16",
+    "@storybook/api": "^6.5.16",
     "@storybook/builder-webpack5": "^6.5.4",
+    "@storybook/components": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.4",
     "@storybook/node-logger": "^6.5.4",
     "@storybook/preset-create-react-app": "^4.1.1",
     "@storybook/react": "^6.5.4",
     "@storybook/testing-library": "^0.0.11",
+    "@testing-library/dom": "^9.0.1",
+    "@testing-library/jest-dom": "^4.2.4",
     "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^17.0.35",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.0.0",
     "babel-plugin-named-exports-order": "^0.0.2",
@@ -91,12 +104,14 @@
     "eslint-plugin-react": "7.29.3",
     "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-sonarjs": "0.12.0",
+    "framer-motion": "^10.6.1",
     "jest": "27.5.1",
     "jest-fetch-mock": "^3.0.3",
     "jest-transform-stub": "2.0.0",
     "prop-types": "^15.8.1",
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
+    "require-from-string": "^2.0.2",
     "ts-jest": "27.1.4",
     "ts-node": "^10.8.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
