--- a/redux-practice/package.json
+++ b/redux-practice/package.json
@@ -2,6 +2,9 @@
   "name": "redux-practice",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@chakra-ui/react": "^2.1.2",
@@ -23,8 +26,8 @@
     "lodash.isequal": "^4.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-paginate": "^8.1.3",
     "react-images-uploading": "^3.1.7",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.9.0",
