--- a/redux-practice/package.json
+++ b/redux-practice/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "redux-practice",
+  "name": "word-catching",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@chakra-ui/react": "^2.1.2",
@@ -22,8 +19,11 @@
     "@types/jest": "^27.5.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "firebase": "^9.18.0",
     "formik": "^2.2.9",
+    "intro.js": "^7.0.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.shuffle": "^4.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-images-uploading": "^3.1.7",
@@ -96,6 +96,7 @@
     "@testing-library/dom": "^9.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@types/lodash.isequal": "^4.5.6",
+    "@types/lodash.shuffle": "^4.2.7",
     "@types/node": "^17.0.35",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^9.0.1",
